--- a/style.css
+++ b/style.css
@@ -28,10 +28,16 @@ h1 {
 #product-list div {
     margin-left: 15px;
     margin-right: 15px;
-    max-width: 300px;
+    max-width: 400px;
+    max-height: 500px;
+    height: 500px;
     text-align: center;
     background-color: rgb(248, 249, 250);
     margin: auto;
+    padding: 20px;
+    padding-bottom: 25px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 #product-list div img {
     width: 250px;
@@ -43,4 +49,6 @@ h1 {
 #product-list div p {
     font-size: 16px;
     color: #888686;
+    line-height: 1.6;
+    margin: auto;
 }
